# liquify

./: README.md
backend/: .gitignore  dev.db  package-lock.json  package.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260131122604_init/: migration.sql
backend/src/: app.module.ts
backend/src/auth/: auth.service.ts
backend/src/pool/: pool.controller.ts  pool.module.ts  pool.service.ts
backend/src/token/: token.controller.ts  token.module.ts  token.service.ts
frontend/: package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/onboarding/: page.tsx
frontend/components/: add-liquidity-dialog.tsx  create-liquidity-pool-dialog.tsx  create-token-form.tsx  dashboard-header.tsx  dashboard-sidebar.tsx  dashboard-stats.tsx  loading.tsx  logo.tsx  mobile-sidebar.tsx  navbar.tsx  pool-card.tsx  pool-detail-dialog.tsx  pool-price-chart.tsx  portfolio-overview.tsx  quick-actions.tsx  recent-activity.tsx  swap-dialog.tsx  token-card.tsx  token-detail-dialog.tsx  token-grid.tsx  token-showcase.tsx  token-table.tsx  token-warning.tsx  transaction-history.tsx  wallet-connect-button.tsx  withdraw-liquidity-dialog.tsx
frontend/lib/: actions.ts  data.ts  schema.ts  types.ts  utils.ts
frontend/lib/hooks/: useAnchorProgram.tsx  useUmi.tsx
frontend/lib/idl/: smart_contract.json
frontend/providers/: solana-provider.tsx
smart_contract/: Anchor.toml  Cargo.toml  README.md
smart_contract/programs/smart_contract/: Cargo.toml
smart_contract/programs/smart_contract/src/: lib.rs
(+16 files in other folders)
